@@ -27,6 +27,8 @@
   * Fixed a bug in the lsl.reader.ldp.DRXFile class that caused the tuning frequencies to be reported wrong by getInfo()
   * Changed how the lsl.reader.ldp.*.readFrame() functions interact with the time tag checker
   * Fixed the ranging of phases coming out of the lsl.imaging.selfCal module
+  * Added 'axis' and 'dtype' keywords to the various statistical functions in lsl.statistics.robust and lsl.misc.mathutil to make the functions more compatible with their numpy counterparts
+  * Added 'boundary' and 'fill_value' keyword to the lsl.misc.dedispersion.incoherent() function to make it clear how the time boundary is handled
 
 1.0.2
   * Added documentation for LDP to the Sphinx build system
